--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -40,10 +40,12 @@
           "power_supply": "Alimentation électrique",
           "host": "Adresse IP de la passerelle",
           "port": "Port de la passerelle",
-          "voltage_entity": "Entité de tension (optionnel)"
+          "voltage_entity": "Entité de tension (optionnel)",
+          "power_entity": "Entité de puissance (optionnel)"
         },
         "data_description": {
-          "voltage_entity": "Entité fournissant la tension en temps réel. Si non définie, les valeurs par défaut seront utilisées"
+          "voltage_entity": "Entité fournissant la tension en temps réel. Si non définie, les valeurs par défaut seront utilisées",
+          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée"
         },
         "description": "Modifiez les paramètres de votre pompe à chaleur Hitachi Yutaki"
       }
@@ -68,11 +70,13 @@
       "power": {
         "data": {
           "power_supply": "Alimentation électrique",
-          "voltage_entity": "Entité de tension (optionnel)"
+          "voltage_entity": "Entité de tension (optionnel)",
+          "power_entity": "Entité de puissance (optionnel)"
         },
         "data_description": {
           "power_supply": "Type d'alimentation électrique de la pompe à chaleur",
-          "voltage_entity": "Entité fournissant la tension du réseau électrique. Si non définie, les valeurs par défaut seront utilisées"
+          "voltage_entity": "Entité fournissant la tension du réseau électrique. Si non définie, les valeurs par défaut seront utilisées",
+          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée"
         },
         "description": "Configuration de l'alimentation électrique",
         "title": "Alimentation électrique"
