--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -41,11 +41,15 @@
           "host": "Adresse IP de la passerelle",
           "port": "Port de la passerelle",
           "voltage_entity": "Entité de tension (optionnel)",
-          "power_entity": "Entité de puissance (optionnel)"
+          "power_entity": "Entité de puissance (optionnel)",
+          "water_inlet_temp_entity": "Entité de température d'entrée d'eau (optionnel)",
+          "water_outlet_temp_entity": "Entité de température de sortie d'eau (optionnel)"
         },
         "data_description": {
           "voltage_entity": "Entité fournissant la tension en temps réel. Si non définie, les valeurs par défaut seront utilisées",
-          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée"
+          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée",
+          "water_inlet_temp_entity": "Entité fournissant une mesure plus précise de la température d'entrée d'eau. Si non définie, les mesures internes seront utilisées",
+          "water_outlet_temp_entity": "Entité fournissant une mesure plus précise de la température de sortie d'eau. Si non définie, les mesures internes seront utilisées"
         },
         "description": "Modifiez les paramètres de votre pompe à chaleur Hitachi Yutaki"
       }
@@ -71,12 +75,16 @@
         "data": {
           "power_supply": "Alimentation électrique",
           "voltage_entity": "Entité de tension (optionnel)",
-          "power_entity": "Entité de puissance (optionnel)"
+          "power_entity": "Entité de puissance (optionnel)",
+          "water_inlet_temp_entity": "Entité de température d'entrée d'eau (optionnel)",
+          "water_outlet_temp_entity": "Entité de température de sortie d'eau (optionnel)"
         },
         "data_description": {
           "power_supply": "Type d'alimentation électrique de la pompe à chaleur",
           "voltage_entity": "Entité fournissant la tension du réseau électrique. Si non définie, les valeurs par défaut seront utilisées",
-          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée"
+          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée",
+          "water_inlet_temp_entity": "Entité fournissant une mesure plus précise de la température d'entrée d'eau. Si non définie, les mesures internes seront utilisées",
+          "water_outlet_temp_entity": "Entité fournissant une mesure plus précise de la température de sortie d'eau. Si non définie, les mesures internes seront utilisées"
         },
         "description": "Configuration de l'alimentation électrique",
         "title": "Alimentation électrique"
@@ -267,8 +275,17 @@
       "r134a_compressor_current": {
         "name": "Courant du Compresseur R134a"
       },
-      "cop": {
-        "name": "Coefficient de Performance"
+      "cop_heating": {
+        "name": "COP Chauffage"
+      },
+      "cop_cooling": {
+        "name": "COP Refroidissement"
+      },
+      "cop_dhw": {
+        "name": "COP ECS"
+      },
+      "cop_pool": {
+        "name": "COP Piscine"
       }
     },
     "binary_sensor": {
