feat: Update devcontainer configuration and refactor Hitachi Yutaki component
- Added JSON editor settings for tab size in devcontainer configuration.
- Introduced Git feature in devcontainer with latest version and custom mounts for GnuPG and SSH.
- Removed unused history fetching function from Hitachi Yutaki sensor.
- Updated English and French translations for compressor status messages.

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -341,10 +341,10 @@
         "name": "Fonction Smart"
       },
       "compressor_running": {
-        "name": "Fonctionnement compresseur"
+        "name": "Compresseur en marche"
       },
       "r134a_compressor_running": {
-        "name": "Fonctionnement compresseur R134a"
+        "name": "Compresseur R134a en marche"
       }
     },
     "select": {
@@ -473,9 +473,5 @@
         }
       }
     }
-  },
-  "translations": {
-    "compressor_running": "Compresseur en marche",
-    "r134a_compressor_running": "Compresseur R134a en marche"
   }
 }
