--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -36,78 +36,64 @@
   "options": {
     "step": {
       "init": {
+        "title": "Options Hitachi Yutaki",
+        "description": "Mettez à jour votre configuration Hitachi Yutaki.",
         "data": {
+          "host": "Hôte/Adresse IP",
+          "port": "Port",
           "power_supply": "Alimentation électrique",
-          "host": "Adresse IP de la passerelle",
-          "port": "Port de la passerelle",
-          "voltage_entity": "Entité de tension (optionnel)",
-          "power_entity": "Entité de puissance (optionnel)",
-          "water_inlet_temp_entity": "Entité de température d'entrée d'eau (optionnel)",
-          "water_outlet_temp_entity": "Entité de température de sortie d'eau (optionnel)"
-        },
-        "data_description": {
-          "voltage_entity": "Entité fournissant la tension en temps réel. Si non définie, les valeurs par défaut seront utilisées",
-          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée",
-          "water_inlet_temp_entity": "Entité fournissant une mesure plus précise de la température d'entrée d'eau. Si non définie, les mesures internes seront utilisées",
-          "water_outlet_temp_entity": "Entité fournissant une mesure plus précise de la température de sortie d'eau. Si non définie, les mesures internes seront utilisées"
-        },
-        "description": "Modifiez les paramètres de votre pompe à chaleur Hitachi Yutaki"
+          "voltage_entity": "Capteur de tension (Optionnel)",
+          "power_entity": "Capteur de puissance (Optionnel)",
+          "water_inlet_temp_entity": "Capteur de température d'entrée d'eau (Optionnel)",
+          "water_outlet_temp_entity": "Capteur de température de sortie d'eau (Optionnel)"
+        }
       }
     }
   },
   "config": {
     "step": {
       "user": {
+        "title": "Passerelle Hitachi Yutaki",
+        "description": "Entrez les détails de connexion pour votre passerelle de pompe à chaleur Hitachi Yutaki.",
         "data": {
           "name": "Nom",
-          "host": "Adresse IP de la passerelle",
-          "port": "Port de la passerelle",
-          "show_advanced": "Afficher les paramètres avancés"
-        },
-        "data_description": {
-          "host": "Adresse IP de la passerelle ATW-MBS-02",
-          "port": "Port de communication Modbus TCP (par défaut: 502)"
-        },
-        "description": "Configurez votre pompe à chaleur Hitachi Yutaki via l'interface Modbus TCP/IP exposée par la passerelle ATW-MBS-02.",
-        "title": "Configuration de la passerelle"
+          "host": "Hôte/Adresse IP",
+          "port": "Port",
+          "show_advanced": "Afficher les options avancées"
+        }
       },
       "power": {
+        "title": "Configuration de l'alimentation",
+        "description": "Configurez l'alimentation et les capteurs de température externes.",
         "data": {
           "power_supply": "Alimentation électrique",
-          "voltage_entity": "Entité de tension (optionnel)",
-          "power_entity": "Entité de puissance (optionnel)",
-          "water_inlet_temp_entity": "Entité de température d'entrée d'eau (optionnel)",
-          "water_outlet_temp_entity": "Entité de température de sortie d'eau (optionnel)"
-        },
-        "data_description": {
-          "power_supply": "Type d'alimentation électrique de la pompe à chaleur",
-          "voltage_entity": "Entité fournissant la tension du réseau électrique. Si non définie, les valeurs par défaut seront utilisées",
-          "power_entity": "Entité fournissant la puissance consommée en temps réel. Si non définie, la puissance sera calculée",
-          "water_inlet_temp_entity": "Entité fournissant une mesure plus précise de la température d'entrée d'eau. Si non définie, les mesures internes seront utilisées",
-          "water_outlet_temp_entity": "Entité fournissant une mesure plus précise de la température de sortie d'eau. Si non définie, les mesures internes seront utilisées"
-        },
-        "description": "Configuration de l'alimentation électrique",
-        "title": "Alimentation électrique"
+          "voltage_entity": "Capteur de tension (Optionnel)",
+          "power_entity": "Capteur de puissance (Optionnel)",
+          "water_inlet_temp_entity": "Capteur de température d'entrée d'eau (Optionnel)",
+          "water_outlet_temp_entity": "Capteur de température de sortie d'eau (Optionnel)"
+        }
       },
       "advanced": {
+        "title": "Paramètres avancés",
+        "description": "Configurez les paramètres avancés de Modbus et de l'intégration.",
         "data": {
-          "slave": "ID esclave Modbus",
-          "scan_interval": "Intervalle de scan (secondes)",
-          "dev_mode": "Mode développeur"
-        },
-        "description": "Les paramètres avancés sont destinés aux développeurs et aux utilisateurs ayant une configuration Modbus personnalisée.",
-        "title": "Paramètres avancés"
+          "slave": "ID Esclave Modbus",
+          "scan_interval": "Intervalle d'interrogation (secondes)",
+          "dev_mode": "Mode développeur (active toutes les entités)"
+        }
       }
     },
     "error": {
-      "cannot_connect": "Échec de connexion",
-      "invalid_slave": "ID esclave Modbus invalide",
-      "modbus_error": "Erreur de communication Modbus",
-      "unknown": "Erreur inattendue",
-      "invalid_central_control_mode": "La pompe à chaleur ne doit pas être configurée en mode Local (0). Modes possibles : Air (1), Water (2), Total (3). Veuillez modifier ce réglage dans les paramètres de votre pompe à chaleur (Configuration du système > Options générales > Option commande externe > Mode de controle)."
+      "cannot_connect": "Échec de la connexion à la passerelle. Veuillez vérifier l'hôte et le port.",
+      "invalid_slave": "ID d'esclave Modbus invalide. Veuillez vérifier l'ID et réessayer.",
+      "modbus_error": "Une erreur Modbus s'est produite. Consultez les journaux pour plus de détails.",
+      "invalid_central_control_mode": "La passerelle doit être en mode de contrôle 'Central'. Veuillez modifier ce paramètre dans les réglages de la passerelle.",
+      "unknown": "Une erreur inconnue s'est produite. Veuillez consulter les journaux.",
+      "system_initializing": "La passerelle Hitachi Yutaki est en cours d'initialisation. Veuillez patienter quelques instants et réessayer.",
+      "desync_error": "La passerelle est désynchronisée de la pompe à chaleur. Assurez-vous que la pompe à chaleur est sous tension et que la connexion entre les deux appareils est correcte."
     },
     "abort": {
-      "already_configured": "L'appareil est déjà configuré"
+      "already_configured": "Cette passerelle Hitachi Yutaki est déjà configurée."
     }
   },
   "entity": {
@@ -417,6 +403,14 @@
             "name": "Période de mesure (jours)"
           }
         }
+      },
+      "system_state": {
+        "name": "État de synchronisation de la passerelle",
+        "state": {
+          "synchronized": "Synchronisé",
+          "desynchronized": "Désynchronisé",
+          "initializing": "Initialisation"
+        }
       }
     },
     "binary_sensor": {
@@ -575,6 +569,16 @@
           "high_demand": "Haute Demande"
         }
       }
+    }
+  },
+  "issues": {
+    "desync_warning": {
+      "title": "Passerelle Hitachi Désynchronisée",
+      "description": "La passerelle Hitachi a perdu la synchronisation avec la pompe à chaleur pendant plus de 3 minutes. Les entités seront indisponibles jusqu'à ce que la connexion soit rétablie.\n\n**Pour résoudre ce problème :**\n1. Vérifiez la connexion physique entre la passerelle et la pompe à chaleur.\n2. Assurez-vous que la pompe à chaleur est sous tension.\n3. Redémarrez la pompe à chaleur et la passerelle si le problème persiste."
+    },
+    "connection_error": {
+      "title": "Passerelle Hitachi Inaccessible",
+      "description": "L'intégration n'a pas pu se connecter à la passerelle Hitachi Yutaki. Les entités seront indisponibles jusqu'à ce que la connexion soit rétablie.\n\n**Pour résoudre ce problème :**\n1. Vérifiez si la passerelle est sous tension et connectée au réseau.\n2. Vérifiez que l'adresse IP et le port configurés dans Home Assistant sont corrects."
     }
   }
 }
