--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -77,7 +77,7 @@
         "title": "Advanced Settings",
         "description": "Configure advanced Modbus and integration settings.",
         "data": {
-          "slave": "Modbus Slave ID",
+          "device_id": "Modbus Device ID",
           "scan_interval": "Polling Interval (seconds)",
           "dev_mode": "Development Mode (enables all entities)"
         }
@@ -85,7 +85,7 @@
     },
     "error": {
       "cannot_connect": "Failed to connect to the gateway. Please check the host and port.",
-      "invalid_slave": "Invalid Modbus slave ID. Please check the ID and try again.",
+      "invalid_device_id": "Invalid Modbus device ID. Please check the ID and try again.",
       "modbus_error": "A Modbus error occurred. Check the logs for more details.",
       "invalid_central_control_mode": "The gateway must be in 'Central' control mode. Please change it in the gateway settings.",
       "unknown": "An unknown error occurred. Please check the logs.",
